2003-10-22  Alexander Malysh  <a.malysh@centrium.de>
    * gw/wml_compiler.c: fixed possible segfault if wml document doesn't contain
      DTD section. Thanks to Vjacheslav Chekushin <slava@lmt.lv> for patch.
      Msg-Id: <3F95203C.60402@lmt.lv>

2003-10-22  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/http.c: applied patch from bug #78.

2003-10-20  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/accesslog.c, gwlib/gwlib.c, gwlib/log.[ch]: applied alog-log-rc-reopen.diff patch.
      This patch should fix race conditions in the accesslog and log module while reopening 
      of log files. Patch just add reader/writer lock and make sure that writer are locked
      while reopening of log files, plus adds log_shutdown(..) function in order to proper
      close log files.

2003-10-20  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_http.c: added forwarding of 'binfo' CGI variable in Kannel
      type.
    * gw/smsbox.c: added X-Kannel-BInfo header for sms-service.
      Thanks to Adi Prasaja <adi@imt.co.id> for this patch.
      [Msg-ID: <20031019021038.GA18965@imt.co.id>]

2003-10-17  Alexander Malysh  <a.malysh@centrium.de>
    * gw/smsc/smsc_smpp.c: applied smsc_smpp.c-allow-plus.diff. This patch 
      implements workaround for buggy SMSC's that send '+' in front of source
      address and ton/npi set to 1/1 (means international/isdn).

2003-10-17  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsbox.c: fixed missing assignment of msg->sms.binfo. Thanks to Paul
      for spotting my looseliness ;)

2003-10-17  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_at.[ch]: adding +CMTI, MO support. Original patch submited 
      by "Rene Kluwen" <rene.kluwen@chimit.nl> and revised by Alexander to fit
      current cvs head tree. Thanks a lot for submission.
      [Msg-ID: <031c01c29faf$5cb51660$1401a8c0@helena>]
      [Msg-ID: <200310162237.01081.a.malysh@centrium.de>]

2003-10-16  Stipe Tolj  <tolj@wapme-systems.de>